# rag-knowledge-core

./: .gitignore  Dockerfile  Dockerfile.mqtt-publisher  README.md  docker-compose.light.yml  docker-compose.override.yml  docker-compose.yml  env.example  init-primary.sh  init-replica.sh  publish_metrics.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: migration.yml
alembic/: env.py
alembic/versions/: 005b9476d49f_added_document_and_chunk_table.py  b4581ff37aa6_initial_script.py
app/: __init__.py  main.py
app/api/decorators/: rate_limit.py
app/configs/: app_config.py  cache_config.py  database_config.py  logger_config.py  messaging_config.py  monitoring_config.py
app/core/: slowapi_limiter.py
app/di/: __init__.py  container.py  loader.py
app/edge/http/controller/: auth_controller.py
app/edge/http/routes/: __init__.py  auth_route.py  example_auth_routes.py  health_route.py  users_route.py
app/edge/socket/: connection_manager.py  socket_handler.py  socket_route.py
app/mediator/: auth_mediator.py
app/middlewares/: __init__.py  auth_middleware.py  exception_middleware.py  logging_middleware.py  rate_limit_middleware.py  request_middleware.py  security_middleware.py
app/models/: __init__.py  base_model.py  chunks_model.py  documents_model.py  user_model.py
app/repositories/: base_repository.py  user_repository.py
app/schemas/: auth_schema.py  socket_schema.py  user_schema.py
app/services/: auth_service.py
app/utils/: security_util.py  tracking_util.py
docs/: rate_limiting.md
infrastructure/: mosquitto.conf  prometheus.light.yml  prometheus.yml
scripts/: migrate.sh
tests/: test_cache_config.py  test_database_config.py  test_messaging_config.py  test_rate_limit.py
